Final changes for dark mode (Issue #1)

--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -8,10 +8,6 @@ main {
     flex: 1;
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
 .top-row {
     width: 100%;
     border-collapse: collapse;
@@ -56,13 +52,6 @@ main {
 @media (min-width: 641px) {
     .page {
         flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
     }
 
     .top-row {
